--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
-    "astro": "^3.1.1"
+    "astro": "^3.1.1",
+    "astro-single-file": "^1.1.0",
+    "html-minifier-terser": "^7.2.0"
   }
 }
