--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "astro": "^3.1.1",
     "astro-single-file": "^1.1.0",
-    "html-minifier-terser": "^7.2.0"
+    "html-minifier-terser": "^7.2.0",
+    "jsdom": "^22.1.0"
   }
 }
