--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.0.2",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "astro": "^3.1.1",
     "astro-single-file": "^1.1.0",
     "html-minifier-terser": "^7.2.0",
-    "jsdom": "^22.1.0"
+    "jsdom": "^22.1.0",
+    "tailwindcss": "^3.3.5"
   }
 }
